---------------------------------------------------------------------------------------------------
Version: 1.0.11
Date: 2021-03-10
  Bugfixes:
    - Fix network id parsing
  Features:
    - Add option to clean failed deliveries
---------------------------------------------------------------------------------------------------
Version: 1.0.10
Date: 2021-03-02
  Bugfixes:
    - Fix format not loading
---------------------------------------------------------------------------------------------------
Version: 1.0.9
Date: 2021-03-02
  Features:
    - Support LTN train length limit & network id
---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 2021-02-28
  Changes:
    - Ignore manually controlled trains
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2021-02-27
  Changes:
    - Print trains in rich text
  Features:
    - Print warning if train finishes cleaning with remaining cargo
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2021-02-27
  Changes:
    - Updated thumbnail (again)
    - Update signal icons (added pixel-perfect version)
    - Fix signal minimaps
  Features:
    - Print warning if train goes to depot with cargo
    - Add colors to messages
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2021-02-26
  Changes:
    - Updated thumbnail
    - Update signal icons
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2021-02-26
  Features:
    - Added changelog
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2021-02-26
  Features:
    - Use stop timeout from LTN settings