@@ -3,6 +3,7 @@ Version: 1.0.11
 Date: 2021-03-10
   Bugfixes:
     - Fix network id parsing
+    - Fix disabled stop timeout
   Features:
     - Add option to clean failed deliveries
 ---------------------------------------------------------------------------------------------------
